OO-8090 a11y contrast issue on book button

--- a/src/main/webapp/static/themes/light/_config.scss
+++ b/src/main/webapp/static/themes/light/_config.scss
@@ -481,13 +481,13 @@ $o-coursesite-sidecol-bg		: $panel-default-heading-bg !default;
 $o-coursesite-sidecol-border	: $panel-default-border !default;
 $o-coursesite-sidecol-radius	: $border-radius-base !default;
 $o-coursesite-sidecol-padding 	: $panel-body-padding !default;
-$o-coursesite-start-color		: $btn-primary-color !default;
+$o-coursesite-start-color		: o-a11y-color($btn-primary-color, $btn-primary-bg) !default;
 $o-coursesite-start-bg			: $btn-primary-bg !default;
 $o-coursesite-start-border		: darken($o-coursesite-start-bg, 5%) !default;
-$o-coursesite-book-color		: $btn-warning-color !default;
+$o-coursesite-book-color		: o-a11y-color($btn-warning-color, $btn-warning-bg) !default;
 $o-coursesite-book-bg			: $btn-warning-bg !default;
 $o-coursesite-book-border		: darken($o-coursesite-book-bg, 5%) !default;
-$o-coursesite-details-color		: $btn-success-color !default;
+$o-coursesite-details-color		: o-a11y-color($btn-success-color, $btn-success-bg) !default;
 $o-coursesite-details-bg		: $btn-success-bg !default;
 $o-coursesite-details-border	: darken($o-coursesite-details-bg, 5%) !default;
 $o-coursesite-go-xs-color		: $o-coursesite-start-color !default; 
