--- a/src/main/webapp/static/themes/openolat/_openolat_config.scss
+++ b/src/main/webapp/static/themes/openolat/_openolat_config.scss
@@ -59,7 +59,9 @@ $o-login-btn-register-bg		: $o-brand-sprout;
 $o-login-btn-register-border	: $o-brand-sprout; 
 
 /* Course site start button */
+$o-coursesite-start-color		: #fff; 
 $o-coursesite-start-bg			: $o-brand-sea; 
+$o-coursesite-book-color		: #fff; 
 $o-coursesite-book-bg			: $o-brand-sea;
 $o-coursesite-details-bg		: $o-brand-grey;
 
